tests/baselines/reference/parserSkippedTokens12.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens12.ts(1,1): error TS1127: Invalid character.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens12.ts(1,3): error TS1127: Invalid character.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens12.ts(1,5): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens12.ts (3 errors) ====
    \ \ \
    
!!! error TS1127: Invalid character.
      
!!! error TS1127: Invalid character.
        
!!! error TS1127: Invalid character.